--- a/interviews/package.json
+++ b/interviews/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "tinybench": "^4.1.0"
   },
-   "scripts": {
+  "scripts": {
     "test": "jest"
   }
 }
